2009-01-01  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8361: Stage change notification emails not send when publishing from Live workspace (Thanks to Andreas Wolf)
	* Fixed bug #9136: Less JS in backend.php / Framehandling problem

2008-12-30  Oliver Hader  <oliver@typo3.org>

	* Added feature #5610: Extend TCEFORM_confObj on Page TSconfig by property keepItems

2008-12-29  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #8746: Date/time field problem with timezone shifting when using the "+NN", "d" or "d+NN" shortcuts
	* Fixed bug #10033: Date/time field shortcut "d" doesn't work on already filled date fields since 4.2.0
	* Fixed issue that on a datetime field entering just a "date" wasn't possible: It is now, and time will be set to "0:00"

2008-12-29  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10022: Pagecontent/Hidden has no effect
	* Added feature #9901: Enable stdWrap for expAll

2008-12-29  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bugfix #10004: Tweak corrections to update wizard for installing new system extensions

2008-12-27  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10004: Extend UpdateWizard for install systemextensions

2008-12-25  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #10012: TYPO3 generates incorrect ETag

2008-12-24  Francois Suter  <francois@typo3.org>

	* Fixed bug #9948: Label rm.clearCache_pages was abusively removed from core lang file

2008-12-23  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9999: Setting [BE][compressionLevel]=true causes problems

2008-12-23  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9810: ClearCacheMenu doesn't work when click on icon

2008-12-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9932: htmlArea RTE Spellcheck does not work when TYPO3 is installed in subdir

2008-12-22  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9977: Extensions class.ext_update.php scripts are executed even when extension isn't loaded